--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div id="contactsection">
         <h2 id="Contact" class= "contactform">Contact </h2>
         <a href="https://www.linkedin.com/in/henry-lamb-bb3791139/" target="_blank"> linkedin</a>
-        <form id="contact form" action="insert your Formspree URL here" method="Post">
+        <form id="contact form" action="https://formspree.io/f/mrgrrbqa" method="Post">
             <label for ="name">*Please fill in your name:</label>
             <br>
             <input type="text" name ="name-text-field" id="name"required>
